# RA

./: CMakeLists.txt  README.md  reqs.txt
debian/: changelog  control  docs
include/: CMakeLists.txt  RA_config.h.cmake  RA_driver_available.h  RA_driver_finder.h
src/: CMakeLists.txt  RA_dlopen.c  RA_dlopen.h  RA_driver_available.c  RA_driver_finder.c  RA_main.c  RA_main.h  RA_sys.h  RA_test.c  ra.pc.cmake
src/linux/: RA_mir_driver.c  RA_wayland_driver.c  RA_x11_driver.c
src/mir/: CMakeLists.txt  RA_mirdevice.c
src/test/: CMakeLists.txt  RA_test.c
src/x11/: RA_x11device.c
